--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+tensorflow
 numpy>=1.9.2
 scipy>=0.15.1
 scikit-learn==0.22.1
@@ -5,5 +6,4 @@ matplotlib>=1.4.3
 pandas>=0.19
 streamlit
 Pillow
-tensorflow-cpu==2.5.0
-opencv-contrib-python-headless
+
